[package]
name = "crusty_flie"
version = "0.1.0"
authors = ["maiso <michielaiso@hotmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
embedded-hal = "0.2.2"
cortex-m-rt = "0.6.7"
cortex-m="0.5.7"
crazy_flie = { git = "https://github.com/crustyflie/crazy_flie" }

[dependencies.stm32f4]
version = "0.6.0"
features = ["stm32f405"]
